# Productivity-SystemTray

./: .gitignore  README.md  amplified-name-484715-i1-4384a7a2d183.json  index.html  package-lock.json  package.json
src/: App.css  App.tsx  TestBranches.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: branch.rs  inbox.rs  metric.rs  mod.rs  notifications.rs  workload.rs
src-tauri/src/integrations/: google_sheets.rs  mod.rs
src-tauri/src/models/: branch.rs  metrics.rs  mod.rs  notification.rs  task.rs  workload.rs
src-tauri/src/services/: branch_service.rs  inbox_service.rs  metrics_service.rs  mod.rs  notification_service.rs  sheets_service.rs  workload_service.rs
src-tauri/src/shared/: error.rs  logger.rs  mod.rs
src/components/cards/: MetricCard.tsx  NotificationCard.tsx  TaskCard.tsx
src/components/charts/: LineChart.tsx
src/components/modals/: CreateTaskModal.tsx
src/hooks/: useBranch.ts  useInbox.ts  useMetrics.ts  useNotification.ts  useWorkload.ts
src/services/: api.ts  branch.service.ts  branch_service.ts  inbox.service.ts  metrics_service.ts  notification.service.ts  task_service.ts  workload.service.ts
src/types/: api_types.ts  branch.types.ts  branch_types.ts  metrics_types.ts  notification.types.ts  notification_types.ts  task_types.ts  workload_types.ts
src/views/: Inbox.tsx  Notification.tsx  SelectBranch.tsx  Theme.ts  ViewMetrics.tsx  ViewWorkload.tsx  YourProductivity.tsx
