[package]
name = "productivity"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# Remova ou comente a seção [lib] se existir
# [lib]
# name = "productivity_lib"
# crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2" 
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
