[package]
name = "productivity"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

google-sheets4 = "5.0"
hyper = "0.14"
hyper-rustls = "0.24"

chrono = "0.4"
chrono-tz = "0.8"

tokio = { version = "1", features = ["full"] }

uuid = { version = "1.6", features = ["v4"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
